--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg" id="navbar">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">Jessica Fernandez</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +33,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mí</a>
+                        <a class="nav-link" href="#">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#patrones">Patrones</a>
+                        <a class="nav-link" href="#patrones">Patterns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contact me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index1.html">English</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Español</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
     </nav>
     <!-- Acerca de mí -->
     <div class="container">
-        <h1 class="m-2">Acerca de mí</h1>
+        <h1 class="m-2">About me</h1>
         <div class="row p-5">
             <div class="col-12 col-lg-6">
                 <img class="img-fluid" src="images/me.jpg" alt="">
@@ -77,7 +77,7 @@
     <!-- Main -->
     <div class="container">
         <hr>
-        <h1 class="m-2" id="patrones">Patrones</h1>
+        <h1 class="m-2" id="patrones">Patterns</h1>
 
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
@@ -129,23 +129,23 @@
     <!-- Contacto -->
     <div class="container mb-3" id="contacto">
         <hr>
-        <h1 class="m-2">Contacto</h1>
+        <h1 class="m-2">Contact</h1>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="exampleFormControlInput2" class="form-label">Nombre y Apellido</label>
-                    <input type="text" class="form-control" placeholder="Nombre y Apellido" aria-label="First name"
+                    <label for="exampleFormControlInput2" class="form-label">Name and Surname</label>
+                    <input type="text" class="form-control" placeholder="Name and Surname" aria-label="First name"
                         id="exampleFormControlInput2">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Escriba su consulta aquí</label>
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="col-auto mb-3">
-                    <button type="submit" class="btn btn-secondary justify-item-center">Enviar</button>
+                    <button type="submit" class="btn btn-secondary justify-item-center">Send</button>
                 </div>
             </div>
 
@@ -154,13 +154,14 @@
     <footer>
         <div class="container">
             <div class="row pt-2">
-                <div class="col-12 col-md-6 text-center">
+                <div class="col-12 col-md-6">
                     <p>Jessica Fernandez</p>
                 </div>
                 <div class="col-12 col-md-6">
                     <ul>
                         <li><a href="https://www.ravelry.com/people/jessyf35" target="_blank"><img src="images/social.png" alt=""></a></li>
                         <li><a href="https://www.instagram.com/jessyf.35/" target="_blank"><img src="images/instagram.png" alt=""></a></li>
+                        <li><p>jessyf.35@gmail.com</p></li>
                     </ul>
                     
                 </div>
