--- a/index1.html
+++ b/index1.html
@@ -13,9 +13,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -24,7 +21,7 @@
 <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg" id="navbar">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="#">Jessica Fernandez</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -154,14 +151,13 @@
     <footer>
         <div class="container">
             <div class="row pt-2">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 text-center">
                     <p>Jessica Fernandez</p>
                 </div>
                 <div class="col-12 col-md-6">
                     <ul>
                         <li><a href="https://www.ravelry.com/people/jessyf35" target="_blank"><img src="images/social.png" alt=""></a></li>
                         <li><a href="https://www.instagram.com/jessyf.35/" target="_blank"><img src="images/instagram.png" alt=""></a></li>
-                        <li><p>jessyf.35@gmail.com</p></li>
                     </ul>
                     
                 </div>
