--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">Jessica Fernandez</a>
+            <a class="navbar-brand" href="#"><h2>Jessica Fernandez</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
