--- a/index1.html
+++ b/index1.html
@@ -128,22 +128,24 @@
         <hr>
         <h1 class="m-2">Contact</h1>
             <div class="row">
+                <form action="https://formspree.io/f/mdojnvjw" method="post"></form>
                 <div class="col mb-3">
                     <label for="exampleFormControlInput2" class="form-label">Name and Surname</label>
-                    <input type="text" class="form-control" placeholder="Name and Surname" aria-label="First name"
+                    <input type="text" name="Nombre" class="form-control" placeholder="Name and Surname" aria-label="First name"
                         id="exampleFormControlInput2">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" name="mensaje" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="col-auto mb-3">
                     <button type="submit" class="btn btn-secondary justify-item-center">Send</button>
                 </div>
+            </form>
             </div>
 
     </div>
